--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,6 @@ sha2 = "0.10.8"
 uuid = {version = "1.15.1", features = ["fast-rng", "v4"]}
 hickory-resolver = { version = "0.25.1" }
 reqwest = {version = "0.12.12"}
-strum = "0.27.1"
 textwrap = "0.16.2"
 csv = "1.3.1"
+users = { version = "0.11.0" }
