--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
             archive_extension: tar.gz
             archive_command: tar czf
           - os: windows-latest
-            target: x86_64-pc-windows-gnu
+            target: x86_64-pc-windows-msvc
             archive_name_suffix: windows-x86_64
             archive_extension: zip
 
