--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,9 @@ chrono = { version = "0.4.38", features = ["serde"] }
 crossterm = "0.28.1"
 ratatui = "0.29.0"
 sha2 = "0.10.8"
-uuid = {version = "1.15.1", features = ["fast-rng", "v4"]}
+uuid = { version = "1.15.1", features = ["fast-rng", "v4"] }
 hickory-resolver = { version = "0.25.1" }
-reqwest = {version = "0.12.12"}
+reqwest = { version = "0.12.12" }
 textwrap = "0.16.2"
 csv = "1.3.1"
-users = { version = "0.11.0" }
+whoami = { version = "1.2.0" }
