--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,8 @@ ratatui = "0.29.0"
 sha2 = "0.10.8"
 uuid = { version = "1.15.1", features = ["fast-rng", "v4"] }
 hickory-resolver = { version = "0.25.1" }
-reqwest = { version = "0.12.12" }
+reqwest = { version = "0.12.12", features = ["json"] }
 textwrap = "0.16.2"
 csv = "1.3.1"
 whoami = { version = "1.2.0" }
+rand = "0.8.5"
